# SF_Rep

./: .gitignore  README.md
BankingNLP/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  directory_tree.txt  docker-compose.yml  info.md  print_dir_tree.ipynb  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  test_preprocessing.py  test_step1.py
BankingNLP/SF_Rep.git/: .gitignore  config  packed-refs
BankingNLP/SF_Rep.git/objects/pack/: pack-0f112a3674aa671786213278dddbd465dccc0271.idx  pack-0f112a3674aa671786213278dddbd465dccc0271.pack
BankingNLP/UML/: new.wsd  Диаграмма вариантов использования.wsd  Диаграмма классов ядра системы.wsd  Диаграмма компонентов системы.wsd  Диаграмма последовательности обработки запроса.wsd  Диаграмма развертывания инфраструктуры.wsd
BankingNLP/api/: routers.py
BankingNLP/configs/: default.yaml
BankingNLP/img/: data_generator.py
BankingNLP/src/banking_nlp/: main.py  requirements-dev.txt  requirements.txt
BankingNLP/src/banking_nlp/UML/: Диаграмма вариантов использования.wsd  Диаграмма классов ядра системы.wsd  Диаграмма компонентов системы.wsd  Диаграмма последовательности обработки запроса.wsd  Диаграмма развертывания инфраструктуры.wsd
BankingNLP/src/banking_nlp/configs/: base_config.yaml
BankingNLP/src/banking_nlp/core/data_processing/: augmentation.py  lemmatization.py  preprocessors.py  tokenizers.py
BankingNLP/src/banking_nlp/services/: analysis.py  health.py
BankingNLP/src/banking_nlp/utils/: config.py  data_initializer.py  logging.py  preprocessing.py
BankingNLP/static/: app.js  style.css
BankingNLP/templates/: index.html
BankingNLP/tests/integration/: test_api.py  test_pipeline.py
BankingNLP/tests/unit/: test_config.py  test_preprocessor.py
BankingNLP_v2/: .dockerignore  .gitignore  README.md  requirements.txt  run.py  test.txt
BankingNLP_v2/.github/workflows/: plantuml.yml
BankingNLP_v2/UIML/: Альтернативная диаграмма компонентов.wsd  Диаграмма пайплайна (process flow).wsd  Диаграмма последовательности.wsd  диаграмма классов.wsd
BankingNLP_v2/app/: Dockerfile  main.py
BankingNLP_v2/app/core/: config.py
BankingNLP_v2/app/schemas/: nlp.py
BankingNLP_v2/app/services/: analytics_service.py  integration_service.py  monitoring_service.py  nlp_service.py
BankingNLP_v2/docs/: Структура проекта.md
BankingNLP_v2/docs/uml/: activity_pipeline.puml  component_system.puml  deployment.puml  sequence_analyze.puml  Архитектура логирования и хранения логов.puml  Диаграмма активности пайплайна.puml  Диаграмма итеративного обновления моделей и отката при деградации.puml  Диаграмма классов (ядро и LLM).puml  Диаграмма компонентов системы.puml  Диаграмма последовательности анализа разговора.puml  Диаграмма развертывания.puml  диаграмма развертывания.puml
BankingNLP_v2/frontend/: Dockerfile 
BankingNLP_v2/frontend/templates/: base.html  dashboard.html  index.html  test_forms.html
BankingNLP_v2/nginx/: nginx.conf
BankingNLP_v2/scripts/: wait-for-db.sh
BankingNLP_v2/src/config/: config.py  config.yaml  logging.yaml
BankingNLP_v2/src/data/: load_data.py
BankingNLP_v2/src/evaluation/: evaluate.py
BankingNLP_v2/src/features/: build_features.py
BankingNLP_v2/src/models/: predict_model.py  train_model.py
BankingNLP_v4/: Dockerfile  docker-compose.yml  prompts.json  requirements.txt  test_settings.py
BankingNLP_v4/app/: Makefile  README.md  main.py  run.py  setup.py  setup.sh
BankingNLP_v4/app/core/: config.py  prompts.py  security.py
BankingNLP_v4/app/models/: SF_Rep.code-workspace  predict_model.py  train_model.py
BankingNLP_v4/app/schemas/: analytics.py  benchmark.py  integration.py  model.py  monitoring.py
BankingNLP_v4/app/services/: analytics_service.py  benchmark_service.py  integration_service.py  llm_service.py  model_service.py  monitoring_service.py  nlp_service.py
BankingNLP_v4/app/tests/: test_analytics.py  test_api_endpoints.py  test_benchmark.py  test_data.py  test_features.py  test_integration.py  test_models.py  test_monitoring.py  test_prompts.py  test_prompts_api.py  test_utils.py
BankingNLP_v4/docs/: CHECKLISTS.md  ERRORS_AND_SOLUTIONS.md  README_TESTING.md
BankingNLP_v4/docs/uml/: Архитектура логирования и хранения логов.puml  Диаграмма активности пайплайна.puml  Диаграмма итеративного обновления моделей и отката при деградации.puml  Диаграмма классов (ядро и LLM).puml  Диаграмма компонентов системы.puml  (+2 more)
BankingNLP_v4/models/: latest_model.joblib  vectorizer.joblib
BankingNLPv1/: .gitignore  README.md  run.py
DataCleaningProject/: README.md  data_cleaning_example.ipynb
Guess_the_number/: README.md
Project-01 Analysis of resumes from HeadHunter/: readme.md
Project_Data_Science_Job_Salaries/: EDA_4_Статистические_тесты_Практика_МельниковаЛали.ipynb  readme.md
Project_Resume_Analysis/: readme.md
Project_VACANCIES_ANALYSIS/: README.md  Анализ вакансий из HeadHunter.ipynb  Анализ_вакансий_из_HeadHunter.ipynb
Project_VACANCIES_ANALYSIS/images/: readme.md
Reasons_for _customer_churn_in_bank/: README.md
Reasons_for_customer_churn_in_bank/: README.md
Игра - Угадай число/: game_v2.py
Практикум - DataCleaningProject/: .gitignore
Практикум - DataCleaningProject/outliers_lib/: README.md
Практикум - Причины оттока клиентов в международном банке/: Practice.ipynb
(+31 files in other folders)
