[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banking-nlp-system"
version = "1.0.0"
description = "Система автоматического анализа банковских разговоров"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Banking NLP Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0", 
    "httpx>=0.27.2",
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

ml = [
    "transformers>=4.46.2",
    "torch>=2.5.1",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
]

[project.urls]
Homepage = "https://github.com/banking-nlp/banking-nlp-system"
Documentation = "https://banking-nlp-system.readthedocs.io/"
Repository = "https://github.com/banking-nlp/banking-nlp-system.git"
"Bug Tracker" = "https://github.com/banking-nlp/banking-nlp-system/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["banking_nlp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
